# docforge

./: .gitignore  Mongodb_schema_reference.md  README.md  REQUIREMENT.TXT  pyproject.toml
app/: config.py  db.py  docforge_app.py  main.py  redis_client.py
app/routes/: cache_routes.py  departments.py  notion_library.py  session_routes.py  sessions.py  templates.py
app/services/: llm_provider.py  orchestrator_service.py  question_service.py  section_service.py
